--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "dragula": "^1.4.1",
     "riot": "^2.0.14",
     "riotjs-loader": "^1.1.3",
+    "lodash": "~2.4.1",
+    "coffee-loader": "latest",
+    "sass-loader": "latest",
+    "style-loader": "latest",
+    "css-loader": "latest",
+    "extract-text-webpack-plugin": "latest",
     "webpack": "^1.8.4",
     "webpack-dev-server": "^1.8.0"
   }
